Atualiza OA\Info em controller.php
