# app/Http/Controllers/PlanoController.php
@@ -35,6 +35,104 @@ class PlanoController extends Controller{
         ]);
     }
 
+    #[OA\Post(
+        path: "/convenios",
+        summary: "Criar um novo convênio",
+        description: "Cria um novo convênio médico.",
+        parameters: [
+            new OA\Parameter(
+                name: "convenio",
+                in: "path", // Significa que vai substituir o {convenio} no link
+                description: "ID do convênio que será atualizado",
+                required: true,
+                // schema: new OA\Schema(type: "integer", example: 1)
+                schema: new OA\Schema(ref: "#/components/schemas/Convenio")
+            )
+        ],
+        /*requestBody: new OA\RequestBody(
+            required: true,
+            description: "Dados necessários para criar um convênio",
+            content: new OA\MediaType(
+                mediaType: "application/json",
+                schema: new OA\Schema(
+                    // required: ["nome", "registro_ans"], // Campos obrigatórios
+                    required: ["nome", "cnpj", "telefone", "email", "id_endereco", "data_criacao", "data_atualizacao"],
+                    properties: [
+                        new OA\Property(
+                            property: "nome",
+                            description: "Nome do convênio médico",
+                            type: "string",
+                            example: "Amil Saúde"
+                        ),
+                        new OA\Property(
+                            property: "cnpj",
+                            description: "CNPJ do convênio médico",
+                            type: "string",
+                            example: "123456"
+                        ),
+                        new OA\Property(
+                            property: "telefone",
+                            description: "Telefone do convênio médico",
+                            type: "string",
+                            example: "(11) 91234-5678"
+                        ),
+                        new OA\Property(
+                            property: "email",
+                            description: "Email do convênio médico",
+                            type: "string",
+                            example: "contato@amil.com.br"
+                        ),
+                        new OA\Property(
+                            property: "id_endereco",
+                            description: "ID do endereço do convênio médico",
+                            type: "string",
+                            example: "1"
+                        ),
+                        new OA\Property(
+                            property: "data_criacao",
+                            description: "Data de criação do convênio médico",
+                            type: "string",
+                            format: "date-time",
+                            example: "2023-01-01T00:00:00Z"
+                        ),
+                        new OA\Property(
+                            property: "data_atualizacao",
+                            description: "Data de atualização do convênio médico",
+                            type: "string",
+                            format: "date-time",
+                            example: "2023-01-01T00:00:00Z"
+                        )
+                    ]
+                )
+            )
+        ),*/
+        requestBody: new OA\RequestBody(
+            required: true,
+            description: "Objeto Convênio a ser transportado",
+            content: new OA\MediaType(
+                mediaType: "application/json",
+                // Aqui dizemos que o corpo da requisição REQUER o Schema 'Convenio'
+                schema: new OA\Schema(ref: "#/components/schemas/Convenio")
+            )
+        ),
+        responses: [
+            /*new OA\Response(
+                response: 200,
+                description: "Convênio criado com sucesso."
+            ),
+            new OA\Response(
+                response: 500,
+                description: "Erro interno do servidor."
+            ),
+        responses: [*/
+        new OA\Response(
+            response: 201,
+            description: "Convênio criado com sucesso!",
+            content: new OA\JsonContent(ref: "#/components/schemas/Convenio") // Opcional: retorna o objeto criado
+        ),
+        new OA\Response(response: 422, description: "Erro de validação.")
+        ]
+    )]
     public function store(Request $request){
         $request->validate([
             'descricao' => 'required|string|max:255',
